top attraction and top events section created

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,9 @@
 .nav-content:hover:after{
     width: 100%;
 }
+.event-cards::-webkit-scrollbar{
+    display: none;
+}
+.attraction-cards::-webkit-scrollbar{
+    display: none;
+}
